--- a/ckanext/publicamundi/templates/tests/upload-form.html
+++ b/ckanext/publicamundi/templates/tests/upload-form.html
@@ -2,15 +2,18 @@
 
 {% block primary_content_inner %}
 
-<form action="/testing/publicamundi/mock_handle_upload" id="form-1" 
+{% with name = 'metadata_source', title = _('Metadata Source') %}
+<form id="form-1"
+    action=""
+    {#action="/testing/publicamundi/mock_handle_upload?name={{ name }}"#}
     method="post" enctype="multipart/form-data"
     data-module="ababoua" 
   >
     {% snippet 'snippets/upload-ajax.html',
-        name='metadata_source', 
-        title=_('Metadata Source'),
+        name=name, 
+        title=title,
         allowed_mime_types=['text/xml', 'application/xml'],
-        labels={ 'proceed': 'Import', },
+        labels={ 'proceed': 'Upload Now', },
         icons={ 'proceed': 'icon-circle-arrow-right', }
     %}
     <div class="controls">
@@ -18,6 +21,7 @@
         <button type="submit" class="btn btn-small btn-primary">Submit</button>
     </div>
 </form>
+{% endwith %}
 
 {% endblock %}
 
