--- a/ckanext/publicamundi/templates/user/snippets/identified.html
+++ b/ckanext/publicamundi/templates/user/snippets/identified.html
@@ -3,32 +3,21 @@
  
 {% snippet 'user/snippets/status_label.html', status=task_result.status %}
 <div class="dropdown  dashboard-dropdown">
-    <a href="#" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
-      
-      {{ _('Actions') }}
-      <span class="caret"></span>
-    </a>
+    <a href="#" class="btn btn-success dropdown-toggle" data-toggle="dropdown"
+        >{{ _('Actions') }} <span class="caret"></span></a>
     
     <ul class="dropdown-menu">
-      {% block resource_item_explore_links %}
-
+      {% block resource_item_ingest_links %}
       <li>
-	{% set loading_text = _('Loading...') %}
-	
-      <a  href="{{ ingest_render_url }}" data-module="ingest-dialog" data-module-template="{{ ingest_render_url }}" data-loading-text="{{ loading_text }}">
-	  <i class="icon-ingest"></i> 
-	    {{ _('Ingest') }}
-	  </a>
+	  {% set loading_text = _('Loading...') %}
+        <a  href="{{ ingest_render_url }}" data-module="ingest-dialog" data-module-template="{{ ingest_render_url }}" data-loading-text="{{ loading_text }}"
+            ><i class="icon-cog"></i> {{ _('Ingest resource') }}</a>
       </li>
-      
       <li>
-	<a href="{{ reject_url }}" class="" >
-	    <i class="icon-reject"></i>
-	    {{ _('Reject') }}
-	</a>
+	    <a href="{{ reject_url }}" class="" 
+            ><i class="icon-check"></i> {{ _('Ignore') }}</a>
       </li>
-	
-      {% endblock %}
+      {% endblock %} {# resource_item_ingest_links #}
     </ul>
 </div>
 
