--- a/ckanext/publicamundi/templates/user/snippets/ingest_templates/ingest_base.html
+++ b/ckanext/publicamundi/templates/user/snippets/ingest_templates/ingest_base.html
@@ -1,19 +1,11 @@
  
 <div{% if not embedded %} class="modal"{% endif %}>
-
   <div class="modal-header">
-    <h3>
-      {{ _('Ingest Form') }}
-    </h3>
+    <h3>{{ _('Ingest Resource') }}</h3>
   </div>
   <div{% if not embedded %} class="modal-body"{% endif %}>
    <body>
     {% block ingest_content %}{% endblock %}
   </body>
-
   </div>
 </div>
- 
- 
-       
-
