--- a/ckanext/publicamundi/templates/user/snippets/package_item.html
+++ b/ckanext/publicamundi/templates/user/snippets/package_item.html
@@ -43,7 +43,7 @@ Example:
       <section class="resources">
         {% for resource in package.resources %}
 	  
-	  {% set task_result=h.identify_resource(resource.id) %}
+	  {% set task_result=h.resource_ingestion_result(resource.id) %}
 	  
           {% if task_result.found %} 
 	      {% snippet 'user/snippets/publicamundi_resource_item.html', pkg=package, res=resource ,task_result=task_result, parent=parent%}
