--- a/ckanext/publicamundi/themes/geodata/templates/group/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/group/index.html
@@ -52,6 +52,10 @@
   {% endblock %}
 {% endblock %}
 
+{% block gap %}{% endblock %}
+
 {% block secondary_content %}
-  {% snippet "group/snippets/helper.html" %}
+    <div class="alt-side-style">
+        {% snippet "group/snippets/helper.html" %}
+    </div>
 {% endblock %}
