--- a/ckanext/publicamundi/themes/geodata/templates/organization/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/organization/index.html
@@ -47,6 +47,10 @@
   {% endblock %}
 {% endblock %}
 
+{% block gap %}{% endblock %}
+
 {% block secondary_content %}
-  {% snippet "organization/snippets/helper.html" %}
+    <div class="alt-side-style">
+        {% snippet "organization/snippets/helper.html" %}
+    </div>
 {% endblock %}
