--- a/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
@@ -5,7 +5,7 @@
 {% set search_class = search_class if search_class else 'search-giant' %}
 {% set no_bottom_border = no_bottom_border if no_bottom_border else false %}
 
-<form class="search-form{% if no_bottom_border %} no-bottom-border{% endif %}" method="get" data-module="select-switch">
+<form class="search-form-top search-form{% if no_bottom_border %} no-bottom-border{% endif %}" method="get" data-module="select-switch">
 
   {% block search_input %}
  
