--- a/ckanext/publicamundi/templates/package/read.html
+++ b/ckanext/publicamundi/templates/package/read.html
@@ -8,6 +8,21 @@
 
 {% endblock %}
 
+{% block page_heading %}
+
+
+    {{ pkg.title or pkg.name }}
+
+{% if pkg.get('state', '').startswith('draft') %}
+          <span class="label label-big label-info state-draft">{{ _('Draft') }}</span>
+        {% elif pkg.get('state', '').startswith('deleted') %}
+          <span class="label label-big label-important state-deleted">{{ _('Deleted') }}</span>
+        {% elif pkg.get('state', '').startswith('invalid') %}
+          <span class="label label-big label-important state-invalid">{{ _('Invalid') }}</span>
+        {% endif %}
+
+      {% endblock %}
+
 {% block secondary_content %}
 
   {{ super() }}
