--- a/ckanext/publicamundi/themes/geodata/templates/footer.html
+++ b/ckanext/publicamundi/themes/geodata/templates/footer.html
@@ -25,7 +25,7 @@
         {# <nav class="footer-links"> #}
         {% block footer_nav %}
        
-        <div class="quarter-middle footer-links">
+        <div class="quarter footer-links">
             <ul class="unstyled">
             {% block footer_links_ckan %}
               {% set api_url = 'http://docs.ckan.org/en/{0}/api.html'.format(g.ckan_doc_version) %}
@@ -46,7 +46,7 @@
         {% endblock %}
         {# </nav> #}
 
-        <div class="quarter-middle footer-links">
+        <div class="quarter footer-links">
             <ul class="unstyled">
                 <li><a href="http://www.ipsyp.gr/"> {{ _('IMIS') }} </a></li>
                 <li><a href="https://www.athena-innovation.gr/"> {{ _('Athena RC') }} </a></li>
@@ -56,11 +56,6 @@
 
         <div class="quarter footer-links">
             <ul class="unstyled">
-            <li>
-                {% block footer_lang %}
-                    {% snippet "snippets/language_selector.html" %}
-                {% endblock %}
-            </li>
             <li><a href="http://www.publicamundi.eu">PublicaMundi</a></li>
             <li><a href="https://github.com/PublicaMundi">Github</a></li>
             <li><a href="https://twitter.com/PublicaMundi">Twitter</a></li>
