--- a/ckanext/publicamundi/themes/geodata/templates/snippets/home_breadcrumb_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/home_breadcrumb_item.html
@@ -1,2 +1,2 @@
 {# Used to insert the home icon into a breadcrumb #}
-<li class="home"><a href="{{ h.url('home') }}">///<span> {{ _('Home') }}</span></a></li>
+ <li class="home"><a href="{{ h.url('home') }}"><span></a></li> 
