--- a/ckanext/publicamundi/themes/geodata/templates/user/dashboard.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "user/edit_base.html" %}
+{% ckan_extends %}
 
 {% set user = c.userobj %}
 
@@ -17,28 +17,17 @@
           {% link_for _('Edit settings'), controller='user', action='edit', id=user.name, class_='btn', icon='cog' %}
         </div>
         <ul class="nav nav-tabs">
-          {{ h.build_nav_icon('user_dashboard', _('News feed')) }}
           {{ h.build_nav_icon('user_dashboard_datasets', _('My Datasets')) }}
           {{ h.build_nav_icon('user_dashboard_organizations', _('My Organizations')) }}
           {{ h.build_nav_icon('user_dashboard_groups', _('My Groups')) }}
+          {{ h.build_nav_icon('user_dashboard', _('News feed')) }}
         </ul>
       </header>
     {% endblock %}
     <div class="module-content">
             {% block primary_content_inner %}
-        <div data-module="dashboard">
-          {% snippet 'user/snippets/followee_dropdown.html', context=c.dashboard_activity_stream_context, followees=c.followee_list %}
-          <h2 class="page-heading">
-            {% block page_heading %}
-              {{ _('News feed') }}
+            {{ super() }} 
             {% endblock %}
-            <small>{{ _("Activity from items that I'm following") }}</small>
-          </h2>
-          {% block activity_stream %}
-            {{ c.dashboard_activity_stream }}
-          {% endblock %}
-        </div>
-      {% endblock %}
     </div>
   </article>
 {% endblock %}
