Fixed (a) defaults for organization selects, (b) user dashboard nav items

--- a/ckanext/publicamundi/templates/package/import_metadata.html
+++ b/ckanext/publicamundi/templates/package/import_metadata.html
@@ -13,18 +13,13 @@
 
 {% block primary_content_inner %}
     <h3>{{ _('Import Metadata') }}</h3>
-    
     {% if not result %}
-    
-    <p>
-    Create a new dataset by importing an existing <strong>XML</strong> metadata file. You can either upload a local file 
-    from your computer, or use a link (if allready published somewhere).
-    </p>
-    {% snippet 'package/snippets/import_metadata_form.html', errors=errors, error_summary=error_summary %}
-    
+    <p>Create a new dataset by importing an existing <strong>XML</strong> metadata file. You can either upload a local file 
+    from your computer, or use a link (if allready published somewhere).</p>
+    {% snippet 'package/snippets/import_metadata_form.html', 
+        owner_org=c.group_id, errors=errors, error_summary=error_summary 
+    %}
     {% else %} {# result #}
-        
     {% snippet 'package/snippets/import_metadata_result.html', result=result, user=c.user %}
-
     {% endif %} {# result #}
 {% endblock %}
