--- a/ckanext/publicamundi/templates/package/snippets/edit-dataset_type.html
+++ b/ckanext/publicamundi/templates/package/snippets/edit-dataset_type.html
@@ -1,6 +1,6 @@
 {% from 'macros/markup_helpers.html' import mark_required %}
 
-{% if not default_value %}{% set default_value = 'ckan' %}{% endif -%}
+{% if not default_value %}{% set default_value = 'inspire' %}{% endif -%}
 
 {% if is_new %}
 
