--- a/ckanext/publicamundi/themes/geodata/templates/header.html
+++ b/ckanext/publicamundi/themes/geodata/templates/header.html
@@ -124,7 +124,7 @@
                 {% block header_account_notlogged %}
                 <li>{% link_for _('Log in'), controller='user', action='login' %}</li>
                 {% if h.check_access('user_create') %}
-                <li>{% link_for _('Register'), controller='user', action='register', class_='sub' %}</li>
+                <li>{% link_for _('Register'), controller='user', action='register' %}</li>
                 {% endif %}
                 {% endblock %}
                 {#  </ul>
