--- a/ckanext/publicamundi/themes/geodata/templates/user/edit.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/edit.html
@@ -2,6 +2,8 @@
 
 {% block secondary_content %}
 <div class="alt-side-style">
-    {% snippet 'package/snippets/info.html', pkg=pkg, hide_follow_button=true %}
+    {{ super() }}
 </div>
 {% endblock %}
+
+
