--- a/ckanext/publicamundi/themes/geodata/templates/footer.html
+++ b/ckanext/publicamundi/themes/geodata/templates/footer.html
@@ -48,9 +48,10 @@
 
         <div class="quarter footer-links">
             <ul class="unstyled">
-                <li><a href="http://www.ipsyp.gr/"> {{ _('IMIS') }} </a></li>
-                <li><a href="https://www.athena-innovation.gr/"> {{ _('Athena RC') }} </a></li>
-                <li><a href="http://ckan.org"> {{ _('CKAN') }} </a></li>
+                <li><a href="http://www.imis.athena-innovation.gr"> {{ _('IMIS') }} </a></li>
+                <li><a href="http://www.rasdaman.com"> {{ _('Rasdaman') }} </a></li>
+                <li><a href="http://www.geolabs.fr"> {{ _('Geolabs') }} </a></li>
+                <li><a href="http://www.getmap.gr"> {{ _('GET') }} </a></li>
             </ul>
         </div>
 
