--- a/ckanext/publicamundi/themes/geodata/templates/header.html
+++ b/ckanext/publicamundi/themes/geodata/templates/header.html
@@ -68,7 +68,7 @@
         <li> #}
 
     <div class="account avatar">
-
+        {# class="account avatar" #}
     <ul class="user-menu">
                 
         {% block header_account_container_content %}
