--- a/ckanext/publicamundi/themes/geodata/templates/package/resource_edit.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/resource_edit.html
@@ -1,9 +1,9 @@
 {% ckan_extends %}
 
-
-
 {% block secondary_content %}
-<div class="paintme">
+{% block paint %}{% endblock %}
+<div class="alt-side-style">
     {{ super() }}
 </div>
 {% endblock %}
+
