--- a/ckanext/publicamundi/themes/geodata/templates/page.html
+++ b/ckanext/publicamundi/themes/geodata/templates/page.html
@@ -112,7 +112,7 @@
             {% endblock %}
 
             {% block secondary %}
-              <aside class="secondary">
+            <aside class="secondary {% block paint %} paintme {% endblock %}">
                 {#
                 The secondary_content block can be used to add content to the
                 sidebar of the page. This is the main block that is likely to be
