--- a/ckanext/publicamundi/themes/geodata/templates/snippets/package_item_search.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/package_item_search.html
@@ -48,11 +48,6 @@ Example:
         </span>
         {% endif %}
         
-        {% if groups %}
-        {% set group = groups[0] %}
-        <a href={{ h.url_for(controller='package', action='read', id=package.name)}}><img src= {{ group.image_display_url }}/></a>
-          {% endif %}
-
           {{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='package', action='read', id=package.name)) }}
         {% if package.get('state', '').startswith('draft') %}
           <span class="label label-info">{{ _('Draft') }}</span>
@@ -64,13 +59,18 @@ Example:
       {% if banner %}
         <span class="banner">{{ _('Popular') }}</span>
       {% endif %}
+        {% if notes %}
+  <div> {{ notes |urlize }} </div>
+  {% endif %}
+
       {% if organization %}
       <div class="dataset-postheading">
           <a href=/organization/{{ package.organization.name}}> {{ organization|urlize }}</a>
       </div>
       {% endif %}
   </div>
-      {% if package.resources and not hide_resources %}
+
+    {% if package.resources and not hide_resources %}
       <ul class="dataset-resources unstyled">
         {% for resource in h.dict_list_reduce(package.resources, 'format') %}
           <li>
