--- a/ckanext/publicamundi/themes/geodata/templates/user/dashboard.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/dashboard.html
@@ -6,11 +6,33 @@
 
 {% block secondary %}{% endblock %}
 
-{% block page_header_navtab_links %}
-  {{ h.build_nav_icon('user_dashboard_datasets', _('My Datasets')) }}
-  {{ h.build_nav_icon('user_dashboard_resources', _('Resources'), icon='cogs') }}
-  {{ h.build_nav_icon('user_dashboard_organizations', _('My Organizations')) }}
-  {{ h.build_nav_icon('user_dashboard_groups', _('My Groups')) }}
-  {{ h.build_nav_icon('user_dashboard', _('News feed')) }}
-{% endblock %}
 
+
+{% block primary %}
+  <article class="module">
+  {% block page_header %}
+      <header class="module-content page-header hug">
+        <div class="content_action">
+          {% link_for _('Edit settings'), controller='user', action='edit', id=user.name, class_='btn', icon='cog' %}
+        </div>
+        <ul class="nav nav-tabs">
+
+    {% block page_header_navtab_links %}
+    {{ h.build_nav_icon('user_dashboard_datasets', _('My Datasets')) }}
+    {{ h.build_nav_icon('user_dashboard_resources', _('Resources'), icon='cogs') }}
+    {{ h.build_nav_icon('user_dashboard_organizations', _('My Organizations')) }}
+    {{ h.build_nav_icon('user_dashboard_groups', _('My Groups')) }}
+    {{ h.build_nav_icon('user_dashboard', _('News feed')) }}
+    {% endblock %}
+    </ul>
+      </header>
+    {% endblock %}
+   
+    <div class="module-content">
+
+      {% block primary_content_inner %}
+      {{super() }}
+      {% endblock %}
+    </div>
+  </article>
+{% endblock %}
