--- a/ckanext/publicamundi/templates/user/snippets/package_item.html
+++ b/ckanext/publicamundi/templates/user/snippets/package_item.html
@@ -1,58 +1,15 @@
-{#
-Displays a single of dataset.
+{% extends 'snippets/package_item.html' %} 
 
-package        - A package to display.
-item_class     - The class name to use on the list item.
-hide_resources - If true hides the resources (default: false).
-banner         - If true displays a popular banner (default: false).
-truncate       - The length to trucate the description to (default: 180)
-truncate_title - The length to truncate the title to (default: 80).
+{# Do not display package description here -#}
+{% block package_item_notes %}{% endblock %}
 
-Example:
-
-  {% snippet 'snippets/package_item.html', package=c.datasets[0] %}
-
-#}
-{% set truncate = truncate or 180 %}
-{% set truncate_title = truncate_title or 80 %}
-{% set title = package.title or package.name %}
-{% set notes = h.markdown_extract(package.notes, extract_length=truncate) %}
-
-<li class="{{ item_class or "dataset-item" }}">
-  {% block package_item_content %}
-       <div class="dataset-content">
-      <h3 class="dataset-heading">
-        {% if package.private %}
-          <span class="dataset-private label label-inverse">
-            <i class="icon-lock"></i>
-            {{ _('Private') }}
-          </span>
-        {% endif %}
-        {{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='package', action='read', id=package.name)) }}
-        {% if package.get('state', '').startswith('draft') %}
-          <span class="label label-info">{{ _('Draft') }}</span>
-        {% elif package.get('state', '').startswith('deleted') %}
-          <span class="label label-important">{{ _('Deleted') }}</span>
-        {% endif %}
-        {{ h.popular('recent views', package.tracking_summary.recent, min=10) if package.tracking_summary }}
-      </h3>
- 
-   
-    </div>
-    {% if package.resources and not hide_resources %}
-      <section class="resources">
-        {% for resource in package.resources %}
-	  
-	  {% set task_result=h.resource_ingestion_result(resource.id) %}
-	  
-          {% if task_result.found %} 
-	      {% snippet 'user/snippets/publicamundi_resource_item.html', pkg=package, res=resource ,task_result=task_result, parent=parent%}
-          {% else %}
-	      {% snippet 'user/snippets/resource_item.html', pkg=package, res=resource ,task_result=task_result%}
-	  {% endif %}
-          </br>
-        {% endfor %}
-      </section>
-    {% endif %}
-  {% endblock %}
-</li>
+{# Display a list of ingestion-aware resources #}
+{% block package_item_resources %}
+  <ul class="resources unstyled">
+  {% for resource in package.resources %}
+  {% with task_result = h.resource_ingestion_result(resource.id) %}
+  {% snippet 'user/snippets/resource_item.html', pkg=package, res=resource, task=task_result, parent=parent %}
+  {% endwith %} {# task_result #}
+  {% endfor %} {# resource #}
+  </ul>
+{% endblock %}
