--- a/ckanext/publicamundi/templates/user/dashboard_resources.html
+++ b/ckanext/publicamundi/templates/user/dashboard_resources.html
@@ -1,7 +1,7 @@
 {% extends "user/dashboard.html" %}
 
 {% block primary_content_inner %}
-  <div data-module="dashboard" class="dashboard-resources">
+  <div class="dashboard-resources">
     <h2 class="hide-heading">{{ _('My Resources') }}</h2>
     {% if c.user_dict.datasets %}
     {% snippet 'user/snippets/package_list.html', packages=c.user_dict.datasets, parent='dashboard' %}
